# hyprwsmode

./: CMakeLists.txt  README.md  default.nix  flake.nix
src/: config.cpp  config.hpp  dispatcher.cpp  dispatcher.hpp  globals.hpp  log.hpp  main.cpp  mode.cpp  mode.hpp  state.cpp  state.hpp  window.cpp  window.hpp
